--- a/css/engg.css
+++ b/css/engg.css
@@ -60,4 +60,10 @@ a{
     font-family: cursive;
     font-weight: bolder;
   }
+@media(max-width:500px);
+{
+    .grid-container{
+        width:50vw;
+        }
+}
  
