--- a/css/engg.css
+++ b/css/engg.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  overflow-x: hidden;
+}
 .head{
     width: 98vw;
     height: 50px;
@@ -14,6 +19,7 @@
     margin-top: 0.5%;
     font-size: 23px;
     font-weight: bolder;
+    color: #4c49e4;
 }
 
 .right_hd{
@@ -29,23 +35,28 @@
 a{
     color:black;
 }
-.grid-container {
-    display: grid;
-    column-gap: 50px;
-    row-gap: 50px;
-    grid-template-columns: auto auto auto;
+.container {
+    display: flex;
+   flex-direction:row;
+   justify-content: space-between;
+   margin: 5%;
     /* background-color: #2196F3; */
     padding: 18px;
     width:85vw;
-  }
+    flex-wrap: wrap;
+    align-items: center;
+    }
   
   .grid-item {
+    margin: 4.5%;
     background-color: rgba(255, 255, 255, 0.8);
     /* border: 1px solid rgba(0, 0, 0, 0.8); */
     /* padding: 15px; */
     font-size: 25px;
     text-align: center;
-    height: 125px;
+    height: 155px;
+    width:40%;
+   
     /* background-color: rgb(160, 227, 227); */
     padding-top: 50px;
     border-radius: 25px;
@@ -59,11 +70,53 @@ a{
     background-color: aquamarine;
     font-family: cursive;
     font-weight: bolder;
+    text-decoration: underline dashed;
   }
-@media(max-width:500px);
-{
-    .grid-container{
-        width:50vw;
-        }
+  a {
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    color: #54b3d6;
+    padding: 0 .25rem;
+    margin: 0 -.25rem;
+    
+  }
+  a:hover {
+    color:black;
+    text-decoration: underline dashed;
+   
+  }
+  @media(max-width:550px) {
+    .container{
+      flex-direction: column;
+      align-items: center;
+    }
+    .grid-item{
+      width: 75vw;
+    }
+    .right_hd{
+      font-size: 15px;
+    }
+  }
+  
+
+@media(max-width:450px) {
+  .container{
+    flex-direction: column;
+    align-items: center;
+  }
+  .grid-item{
+    width: 70vw;
+    font-size: 20px;
+    padding: 70px 0;
+    padding-bottom: 0;
+  }
+  .head{
+    width:100vw;
+    font-size: xx-small;
+  }
+  .right_hd{
+    font-size: 13px;
+  }
+  
+  
 }
  
